--- a/css/master.css
+++ b/css/master.css
@@ -3,10 +3,14 @@
 
 }
 body{
-    background-image: url(../images/bg.png);
-    background-size: 50% auto;
+    background-image: url(../images/PuntoVet.png);
+    background-size: 5% auto;
     font-family: sans-serif;
     
+}
+.bodyform{
+    background-size: 5% auto;
+    font-family: sans-serif;
 }
 
 .userypass{
