--- a/css/master.css
+++ b/css/master.css
@@ -45,11 +45,8 @@ body{
 }
 /* ENCABEZADO DEL FORMULARIO***********************************/
 img {
-    max-width: 100%;
-    animation-duration: 2s;
-    animation-delay: 0s;
-    animation-timing-function: linear;;
-    animation-fill-mode: forwards;
+    
+}
 /*ACCORDION ********************************************************************************************/
 .accordion {
     background-color: #eee;
