--- a/css/login.css
+++ b/css/login.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 
 }
+html, body {
+    margin:0px;
+    height:100%;
+}
 /*BODY***************************************************************************************************************/
 body{
     background-image: url(../images/background01.jpeg);
@@ -16,15 +20,18 @@ body{
 }
 
 .userypass{
-    background-color: rgb(0, 99, 30);
+    background-color: rgb(1, 80, 24);
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     font-weight: bold;
+    font-size: 20px;;
     border-radius: 5%;
     min-width: 150px ; 
-    max-width: 150px;
-    
-    
+    max-width: 150px ;
+    margin-top: 15px;;
+}
+.userypass:hover{
+    background-color:  rgb(35, 179, 76);
 }
 .userinput{
     max-width: 250px ;
@@ -37,34 +44,21 @@ body{
     max-width: 150px;
     margin: 5px 0 5px 0;
 }
-
-#nav ul li{
-    background-color: #47A630;
-    color: white;
-    text-transform: capitalize;
-    font-weight: bold;
-    width:100%;
-    margin: 2px;
-    border-radius: 2%;
-}
-
-#nav ul li a {
-    color: white;
+.form-container{
+    background-color:rgba(104, 182, 255, 0.473);
+    border-radius: 3%;
+    margin-top: 10px;
 }
 /*LOGO*************************************************************************************************************/
 .logo{
     margin-top: 10px;
-    /* border: solid black 1px; */
-    /* border-radius: 50%; */
     max-height: 200px;
+    border-radius: 20%;
 }
+
 /* ENCABEZADO DEL FORMULARIO***********************************/
 img {
-    max-width: 100%;
-    animation-duration: 2s;
-    animation-delay: 0s;
-    animation-timing-function: linear;;
-    animation-fill-mode: forwards;
+    
 }
 /*ACCORDION ********************************************************************************************/
 .accordion {
@@ -77,7 +71,6 @@ img {
     border:none;
     outline: none;
     transition: 0.4s;
-    cursor: pointer;;
 }
 .active, .accordion:hover {
     background-color:#ccc;
@@ -85,17 +78,17 @@ img {
 .panel {
     padding: 0 18px;
     background-color: white;
+    display:none;
     overflow:hidden;
-    
 }
 .h2form {
     color: rgb(73, 160, 73);
 }
-
 /* FOOTER ***********************************************************************************************************/
-footer{
-    position: absolute;
-    bottom: 0;
+.footer{
+    background-color: rgba(37, 255, 255, 0.425);
+    margin-top: 10px;
+    border-radius: 2%;
 }
 
 .footer-nav a{
@@ -104,6 +97,7 @@ footer{
     background-color: rgb(2, 0, 114);
     margin-bottom: 1%;
     max-width: 200px;
+    border-radius: 5%;
     
 }
 .footer-nav a:hover{
