--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-
 }
 html, body {
     margin:0px;
@@ -20,7 +19,8 @@ body{
 }
 
 .userypass{
-    background-color: rgb(1, 80, 24);
+    background-color: rgb(4, 80, 1);
+    border: solid rgb(4, 49, 0) 2px;
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     font-weight: bold;
@@ -105,3 +105,19 @@ img {
     color: white;
     
 }
+
+/* Bottones */
+.boton_inicio{
+    text-decoration: none;
+    
+    background-color: red;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #16570a;
+    border-radius: 6px;
+    border: 2px solid #073a00;
+  }
+
+  
