--- a/css/master.css
+++ b/css/master.css
@@ -111,3 +111,17 @@ footer{
     color: white;
     
 }
+
+
+/* Bottones */
+.boton_inicio{
+    text-decoration: none;
+    background-color: red;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #16570a;
+    border-radius: 6px;
+    border: 2px solid #073a00;
+  }
