--- a/css/login.css
+++ b/css/login.css
@@ -122,10 +122,17 @@ img {
   #registrate:hover{
       font-size: 150%;
       font-weight: bold;
-      color: rgb(178, 206, 179)!important;
+      color: rgb(0, 0, 0)!important;
       border: solid rgb(0, 0, 0) 2px;
       border-radius: 5%;
-      background-color: #bd0000;
+      background-color: #6ba8bb;
   }
-
+  #olvideContra:hover{
+    /* font-size: 150%; */
+    font-weight: bold;
+    color: rgb(0, 0, 0)!important;
+    border: solid rgb(0, 0, 0) 2px;
+    border-radius: 5%;
+    background-color: #c74545;
+}
   
